tests/failing/invalid_prefix.dodo
// Expected: Did not expect token 'IntegerLiteral' while parsing infix expression

fn main() {
    let x: u32 = else 12;
}
